# DuckArrowBridge_C_API

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: data_processor.hpp  duckdb.hpp  task_executor.hpp  thread_pool.hpp
lib/: duckdb.lib
src/: binding.cpp  data_processor.cpp  main.cpp  task_executor.cpp  thread_pool.cpp
